fix spacing walimah and bismillah

--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ body {
   color: var(--color6);
   font-size: 1rem;
   letter-spacing: 0.26em;
-  padding: 0 0 1em 0;
+  padding: 3rem 0 1rem 0;
 }
 
 .ubaidillah {
@@ -230,7 +230,7 @@ body {
 }
 
 .mukodimah {
-  margin-top: 4rem;
+  margin-top: 10rem;
   text-align: center;
 }
 
